--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/Administrator/eclipse-workspace/MCForgeProtocol/lib/MC-1.7.10.jar"/>
+	<classpathentry kind="lib" path="C:/Data/eclipse-workspace/EndMinecraftPlus/lib/javassist-3.22.0-CR2.jar"/>
+	<classpathentry kind="lib" path="C:/Data/eclipse-workspace/EndMinecraftPlus/lib/MC-1.12.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
